<resources>
    <string name="app_name">Bluefruit_Playground</string>
    <string name="select_device">Select a Circuit Playground Bluefruit device to connect to</string>
    <string name="title_activity_tone">ToneActivity</string>
    <string name="modules">Modules</string>
    <string name="tone_generator">Tone Generator</string>
    <string name="appbar_scrolling_view_behavior"></string>
    <string name="NSBluetoothAlwaysUsageDescription">This app needs access to Bluetooth to connect to Circuit Playground Bluefruit devices</string>
    <string name="settings_detail_bluetooth">This app needs access to Bluetooth to connect to Circuit Playground Bluefruit devices.\n\nPlease press \"Okay\" and then turn on Bluetooth.\n\nRemember to disable it again when you\'re done to save battery.</string>
    <string name="settings_detail_location">Location Services should be enabled to scan bluetooth peripherals. \n\nPlease press \"Okay\" and turn the main location service switch then press the Back button.\n\nRemember to disable it again when you\'re done to save battery.</string>
    <string name="okay">Okay</string>
    <string name="exit">Exit</string>
    <string name="startup_bluetooth_unsupported">This device doesn\'t support Bluetooth Low Energy which is needed to connect to the Circuit Playground Bluefruit device</string>
    <string name="bluetooth_unsupported">This device doesn\'t support Bluetooth Low Energy</string>
    <string name="bluetooth_notauthorized">This app is not authorized to use the Bluetooth Low Energy</string>
    <string name="bluetooth_poweredoff">Bluetooth is currently powered off</string>
    <string name="bluetooth_locationpermission_disabled_text">Location Services should be enabled to scan bluetooth peripherals.\nPlease, go to settings and enable it to start scanning peripherals</string>
    <string name="bluetooth_locationpermission_title">This app needs location access</string>
    <string name="bluetooth_locationpermission_text">Please grant location access so this app can scan for Bluetooth peripherals</string>
    <string name="bluetooth_locationpermission_notavailable_title">Bluetooth Scanning not available</string>
    <string name="bluetooth_locationpermission_notavailable_text">Since location access has not been granted, the app will not be able to scan for Bluetooth peripherals</string>
    <string name="bluetooth_scanner_errorregisteringapp">App cannot be registered for bluetooth scanning.\nPlease reset bluetooth and try again.</string>
    <string name="bluetooth_connecting_error">Error connecting to peripheral</string>
    <string name="bluetooth_advertising_start_error">Error starting advertising</string>
    <string name="tip0_title">Welcome</string>
    <string name="tip0_detail">Bluefruit Playground provides you with a variety of tools to communicate with your Circuit Playground Bluefruit device!\nCircuit Playground Bluefruit is available at the Adafruit shop.</string>
    <string name="tip0_link_text">Adafruit shop</string>
    <string name="tip0_link_url">https://www.adafruit.com/product/4333</string>
    <string name="tip0_action">Let\'s get started&#8230;</string>
    <string name="tip1_title">Power Up</string>
    <string name="tip1_detail">First, follow the instructions here to load the correct firmware. Then, connect Circuit Playground Bluefruit to USB, AAA battery pack or a Lipoly battery to power up.</string>
    <string name="tip1_link_text">instructions here</string>
    <string name="tip1_link_url">https://learn.adafruit.com/bluefruit-playground-app/firmware</string>
    <string name="tip1_action">Next</string>
    <string name="tip2_title">Discover</string>
    <string name="tip2_detail">Once Circuit Playground Bluefruit is powered, place it near your phone and tap the button below.</string>
    <string name="tip2_action">Begin pairing</string>
    <string name="about_title">About</string>
    <string name="about_app_name">Bluefruit Playground</string>
    <string name="about_text">Bluefruit Playground is designed for use with Circuit Playground Bluefruit, available for purchase from the Adafruit shop\n\nBefore you can use this app, you\'ll need to load the uf2 firmware file on your Circuit Playground Bluefruit.\n\nLearn more at the Adafruit Learning System.\n\n----------\n\nAcknowledgements\n\nPortions of this Software may utilize the following copyrighted material, the use of which is hereby acknowledged. \n\nGraphView\nCopyright &#169;&gt; 2011\nJonas Gehring\nhttps://github.com/jjoe64/GraphView\n\nViewPagerIndicator\nCopyright &#169;&gt; 2011\nJake Wharton\nhttps://github.com/JakeWharton/ViewPagerIndicator\n\nColorPickerView\nCopyright &#169;&gt; 2017\nJaewoong Eum\nhttps://github.com/skydoves/ColorPickerView\n\nthree.js\nCopyright &#169;&gt; 2010\nMr.doob\nhttps://github.com/mrdoob/three.js\n\n----------\n\nThis app was created by:\nTim Cocks</string>
    <string name="about_link0_text">Adafruit shop</string>
    <string name="about_link0_url">https://www.adafruit.com/product/4333</string>
    <string name="about_link1_text">uf2 firmware file</string>
    <string name="about_link1_url">https://learn.adafruit.com/bluefruit-playground-app/firmware</string>
    <string name="about_link2_text">Adafruit Learning System</string>
    <string name="about_link2_url">https://learn.adafruit.com/bluefruit-playground-app/overview</string>
    <string name="scanner_title">Finding CPB</string>
    <string name="scanner_connecting">Connecting&#8230;</string>
    <string name="scanner_connected">Connected&#8230;</string>
    <string name="scanner_discoveringservices">Discovering services&#8230;</string>
    <string name="scanner_servicesdisconvered">Services disconvered&#8230;</string>
    <string name="scanner_errordiscoveringservices">Error discovering peripheral services</string>
    <string name="scanner_peripheraldisconnected">Peripheral disconnected</string>
    <string name="scanner_searching">Finding Circuit Playground Bluefruit devices&#8230;</string>
    <string name="scanner_press_to_search">Tap here to scan&#8230;</string>
    <string name="scanner_subtitle">Select a Circuit Playground Bluefruit device to connect to:</string>
    <string name="scanner_unnamed">&lt;Unknown&gt;</string>
    <string name="scanner_problems_action">I can\'t find my device</string>
    <string name="scanner_backbutton">Disconnect</string>
    <string name="scanner_setupuart">Starting UART protocol</string>
    <string name="uart_error_peripheralinit">Uart protocol can not be initialized</string>
    <string name="scannerproblems_title">Troubleshooting</string>
    <string name="scannerproblems_tip0_title">Turn on the CPB</string>
    <string name="scannerproblems_tip0_details">Make sure that the Circuit Playground Bluefruit is powered on. \nVerify that the green "On" light is lit.</string>
    <string name="scannerproblems_tip1_title">Check the Circuit Playground Bluefruit firmware</string>
    <string name="scannerproblems_tip1_details">You\'ll need to load a specific firmware on your CPB to interact with this app.\nDownload it from the Bluefruit Playground guide at learn.adafruit.com</string>
    <string name="scannerproblems_tip1_link_text">Bluefruit Playground guide at learn.adafruit.com</string>
    <string name="scannerproblems_tip1_link_url">https://learn.adafruit.com/bluefruit-playground-app/firmware</string>
    <string name="scannerproblems_tip2_title">Reset Circuit Playground Bluefruit</string>
    <string name="scannerproblems_tip2_details">Try pressing the small Reset button near the center of the Circuit Playground Bluefruit.</string>
    <string name="modules_title">Modules</string>
    <string name="modules_subtitle">Each module interacts with a specific type of sensor on the Circuit Playground Bluefruit device</string>
    <string name="modules_color_title">NeoPixels</string>
    <string name="modules_color_subtitle">Control LED color &amp; animation</string>
    <string name="modules_light_title">Light Sensor</string>
    <string name="modules_light_subtitle">View continuous light sensor readings</string>
    <string name="modules_button_title">Button Status</string>
    <string name="modules_button_subtitle">View state of built-in buttons &amp; switch</string>
    <string name="modules_tone_title">Tone Generator</string>
    <string name="modules_tone_subtitle">Turn CPB into a musical instrument</string>
    <string name="modules_accelerometer_title">Accelerometer</string>
    <string name="modules_accelerometer_subtitle">View orientation based on accelerometer data</string>
    <string name="modules_temperature_title">Temperature</string>
    <string name="modules_temperature_subtitle">View current temperature readings</string>
    <string name="neopixels_title">NeoPixels</string>
    <string name="neopixels_help">NeoPixels mode allows you to control the color of CPB’s built-in NeoPixel LEDs individually, as a group, or by playing preset animations.\n\n• Select NeoPixels to control by tapping them in the Circuit Playground Bluefruit image.\n\n• Set the color of selected NeoPixels by choosing a color from the Color Palette or Color Wheel at the bottom.\n\n• Tap a light sequence to trigger an animation using all of the NeoPixels.</string>
    <string name="neopixels_sequence_title">Light Sequence</string>
    <string name="neopixels_sequence_speed">Speed</string>
    <string name="neopixels_palette_title">Color Palette</string>
    <string name="neopixels_palette_brightness">Brightness</string>
    <string name="neopixels_colorwheel_title">Color Wheel</string>
    <string name="neopixels_colorwheel_brightness">Brightness</string>
    <string name="lightsensor_title">Light Sensor</string>
    <string name="lightsensor_help">Light Sensor mode allows you to view the amount of light detected by Circuit Playground Bluefruit’s built-in ALS-PT19 light sensor.\n\n• The current light level reading is displayed at the bottom of the screen. \n\n• Try shining a flashlight on the CPB and watch the values change in realtime</string>
    <string name="lightsensor_panel_title">Luminance Reading</string>
    <string name="lightsensor_panel_unit">Light level</string>
    <string name="buttonstatus_title">Button Status</string>
    <string name="buttonstatus_help">Button Status mode shows which buttons are currently being pressed on Circuit Playground Bluefruit. \n\n• Currently active buttons are displayed in orange at the bottom\n\n• Current state of the built-in slide switch is displayed as an arrow indicating its position</string>
    <string name="buttonstatus_panel_title">Buttons Pressed</string>
    <string name="buttonstatus_panel_switch">Switch</string>
    <string name="buttonstatus_panel_button_a">Button A</string>
    <string name="buttonstatus_panel_button_b">Button B</string>
    <string name="tonegenerator_title">Tone Generator</string>
    <string name="tonegenerator_help">Tone Generator mode allows you to use Circuit Playground Bluefruit as a simple music synthesizer.\n\n• Press a key on the piano keyboard to play a corresponding tone on the built-in piezo buzzer.\n\n• Press keys in sequence to perform a song</string>
    <string name="accelerometer_title">Accelerometer</string>
    <string name="accelerometer_help">Accelerometer mode uses readings from Circuit Playground Bluefruit’s LIS3DH 3-axis XYZ accelerometer to determine the board’s current orientation.\n \n• Orientation is reflected in the position of the 3D model\n\n• Individual values are displayed in the space at the bottom of the screen.\n\n• Drag the 3D model in any direction to apply a rotation offset.\n\n• Double tap the 3D model to remove rotation offset</string>
    <string name="temperature_title">Temperature</string>
    <string name="temperature_units_farenheit">ºF</string>
    <string name="help_title">Help</string>
    <string name="dialog_done">Done</string>
    <string name="back">Back</string>
</resources>